package structural.decorator.b1;

public interface BieuThuc {
    Double giaTri();
    String bieuThuc();
}
